raw/NAILUL MURODZ MUHAMMAD 6400 245150201111033/2024-11-14-07-47-23.ceg/compilation.txt
NT.java:49: error: class, interface, enum, or record expected
}
^
1 error
Not compiled
